[package]
name = "crabdb"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayref = "0.3.9"
base64 = "0.22.1"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
x25519-dalek = "2.0.1"
